v0.10/_sources/examples/Basic_Usage.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/Basic_Usage.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_Basic_Usage.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_Basic_Usage.py:


===============
THREDDS Catalog
===============

Read a catalog from THREDDS Data Server.

This example grabs a remote catalog and prints out the catalog references
contained within.

.. GENERATED FROM PYTHON SOURCE LINES 14-19

.. code-block:: Python


    # This is currently a placeholder for a better example
    from siphon.catalog import TDSCatalog
    from siphon.http_util import session_manager








.. GENERATED FROM PYTHON SOURCE LINES 20-23

.. code-block:: Python

    cat = TDSCatalog('http://thredds.ucar.edu/thredds/catalog.xml')
    print(list(cat.catalog_refs))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    ['Forecast Model Data', 'Forecast Products and Analyses', 'Radar Data', 'Satellite Data', 'Text Products', 'Unidata case studies']




.. GENERATED FROM PYTHON SOURCE LINES 24-26

Basic HTTP authentication can also be used by using the HTTP session manager
and setting some default options for HTTP sessions

.. GENERATED FROM PYTHON SOURCE LINES 26-28

.. code-block:: Python

    session_manager.set_session_options(auth=('username', 'password'))
    cat = TDSCatalog('https://thredds.rda.ucar.edu/thredds/catalog/catalog.xml')








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.509 seconds)


.. _sphx_glr_download_examples_Basic_Usage.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: Basic_Usage.ipynb <Basic_Usage.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: Basic_Usage.py <Basic_Usage.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: Basic_Usage.zip <Basic_Usage.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
